# granola-x-deepmind-hackathon

./: .gitignore  CHECKLIST.md  CLAUDE.md  GEMINI.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  render.yaml  start.sh
backend/: .env.example  agents.py  database.py  main.py  models.py  pyproject.toml  rate_limiter.py  schema.sql  test_agents.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-neo/: index.html  package-lock.json  package.json
frontend-neo/src/: App.jsx  index.css
frontend-neo/src/components/: CandidateCard.jsx  CandidateListModal.jsx  CandidateSwiper.jsx  JobForm.jsx  PitchModal.jsx  StatsPanel.jsx  SwipeControls.jsx
frontend-neo/src/context/: AppContext.jsx
frontend-neo/src/hooks/: useKeyboardShortcuts.js
frontend/src/: App.jsx
frontend/src/components/: CandidateCard.jsx  CandidateSwiper.jsx  JobForm.jsx  LandingPage.jsx  PitchModal.jsx  StatsPanel.jsx  SwipeControls.jsx
frontend/src/context/: AppContext.jsx
